--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 BINANCE_API_KEY=your_key
 BINANCE_API_SECRET=your_secret
+OPENAI_API_KEY=your_openai_api_key
+TWITTER_BEARER_TOKEN=your_twitter_bearer_token
